--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <aside>
 
     </aside>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
