base stylings added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <header><h1>IdeaBox</h1></header>
-    <main>
+    <section class="top-section">
+      <header>
+        <h1><span>Idea</span>Box</h1>
+      </header>
       <form>
         <input type="text" placeholder="Title" class="title-input">
-        <input type="textArea" placeholder"Body" class="body-input">
-        <input type="button" value="Save" class="save-button">
+        <input type="input" placeholder="Body" class="body-input">
+        <input type="button" value="save" class="save-button">
       </form>
-    </main>
+    </section>
     <aside class="idea-section">
+      <!-- <div> -->
+      <input type="search" placeholder="Search" id="search-box">
+      <!-- </div> -->
     </aside>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
