adding delete button svg and js functinality. Need recent work we did yesterday via styling cards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IdeaBox</title>
+    <title>ideaBox</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
@@ -12,7 +12,7 @@
   <body>
     <section class="top-section">
       <header>
-        <h1><span>Idea</span>Box</h1>
+        <h1><span>idea</span>Box</h1>
       </header>
       <form>
         <input type="text" placeholder="Title" class="title-input">
