adding eval notes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1><span>idea</span>Box</h1>
       </header>
       <form>
+        <!-- labels in form -->
         <input type="text" placeholder="Title" class="title-input">
         <input type="input" placeholder="Body" class="body-input">
         <input type="button" value="save" class="save-button">
